iac/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pursit-ui
  namespace: pursit
  labels:
    app: pursit-ui
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: pursit-ui
  template:
    metadata:
      name: pursit-ui
      labels:
        app: pursit-ui
    spec:
      containers:
        - name: pursit-ui
          image: ghcr.io/umu-art/pursit-ui:master
          imagePullPolicy: Always

          securityContext:
            allowPrivilegeEscalation: false

          resources:
            requests:
              memory: "50M"
              cpu: "50m"
            limits:
              memory: "100M"
              cpu: "100m"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 20

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 20

      imagePullSecrets:
        - name: github-container-registry

      restartPolicy: Always
