iac/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pursit-ui
  namespace: pursit
spec:
  selector:
    app: pursit-ui
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
  type: ClusterIP
