iac/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pursit-ingress
  namespace: pursit
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: pursit.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pursit-front
                port:
                  name: http
          - path: /backend/core
            pathType: Prefix
            backend:
              service:
                name: pursit-core
                port:
                  name: http
          - path: /backend/media
            pathType: Prefix
            backend:
              service:
                name: pursit-media
                port:
                  name: http

    - host: xn--h1andegc.xn--p1ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pursit-front
                port:
                  name: http
          - path: /backend/core
            pathType: Prefix
            backend:
              service:
                name: pursit-core
                port:
                  name: http
          - path: /backend/media
            pathType: Prefix
            backend:
              service:
                name: pursit-media
                port:
                  name: http
  tls:
    - hosts:
        - pursit.ru
        - xn--h1andegc.xn--p1ai
      secretName: pursit-tls
